--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Welfare</string>
+    <string name="text_page_indicator">%1$d/%2$d</string>
+    <string name="text_loading">"正在加载中&#8230;"</string>
+    <string name="title_index">首页</string>
 </resources>
